# devsearch

./: .gitignore  pyproject.toml
devsearch/: settings.py  urls.py
projects/: forms.py  models.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_tag_project_vote_ratio_project_vote_total_review_and_more.py  0003_project_project_image.py
projects/templates/projects/: delete_template.html  project.html  project_form.html  projects.html
static/styles/: main.css
templates/: base.html  navbar.html
